Fix table spacing

--- a/src/scss/base/_config.scss
+++ b/src/scss/base/_config.scss
@@ -13,3 +13,6 @@ $text-tiny: 12px;
 
 $photo-size: 36px;
 $table-cell-spacing: 20px;
+$icon-size: 20px;
+$table-cell-width: 27%;
+$table-cell-width-short: 50 - $table-cell-width;
