--- a/src/scss/components/_table.scss
+++ b/src/scss/components/_table.scss
@@ -10,18 +10,23 @@
         border-bottom: 1px solid $border;
         font-weight: normal;
         padding: 16px $table-cell-spacing / 2;
+        width: $table-cell-width;
 
         &_first {
           padding-left: $table-cell-spacing;
         }
 
         &_last {
-          padding-left: $table-cell-spacing;
+          padding-right: $table-cell-spacing;
         }
 
+        &_short {
+          width: $table-cell-width-short;
+        }
     }
 
     &__cell {
+        line-height: 1.5;
         padding: 12px $table-cell-spacing / 2;
         vertical-align: middle;
 
@@ -30,11 +35,7 @@
         }
 
         &_last {
-          padding-left: $table-cell-spacing;
-        }
-
-        &_photo {
-          width: $photo-size;
+          padding-right: $table-cell-spacing;
         }
     }
 
@@ -42,6 +43,25 @@
         &:nth-child(even) {
             background-color: $secondary-background;
         }
+    }
+
+    &__content {
+      align-items: center;
+      display: flex;
+
+      &_actions {
+        justify-content: space-between;
+      }
+    }
+
+    &__photo {
+      margin-right: $table-cell-spacing;
+    }
+
+    &__actions {
+      display: flex;
+      justify-content: space-between;
+      width: 2 * $icon-size + $table-cell-spacing;
     }
 
 }
